--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ html,
 
 
 .card-img {
-    width: 100%;
+    width: 80%;
+    height: 60%;
     margin: 1.5rem 0;
     padding: 20px;
     background-color: rgb(220, 219, 153);
@@ -51,6 +52,7 @@ html,
     font-size: 1.8rem;
     padding: 20px;
     background-color: rgb(220, 219, 153);
+    text-align: center;
 }
 
 
