--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html,
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: rgb(66, 100, 155);
+    background-color: rgb(150, 153, 157);
 }
 
 .website-name {
@@ -17,11 +17,21 @@ html,
     font-size: 50px;
     margin-top: 20px;
     margin-bottom: 20px;
+    box-shadow: 10px 5px 10px rgba(0, 0, 0, 1);
 }
+
+.section-name {
+    text-align: center;
+    font-size: 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    box-shadow: 10px 5px 10px rgba(0, 0, 0, 1);
+}
+
 
 .card {
     height: 50vh;
-    width: 30%;
+    width: 24%;
     margin: 2.5rem 0;
     display: flex;
     background-color: rgb(220, 219, 153);
@@ -61,9 +71,7 @@ html,
     flex-wrap: wrap;
     width: 85vw;
     justify-content: space-around;
-    background-color: rgba(66, 155, 153, 0.778);
     margin: auto;
-
 }
 
 .card:hover {
