--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ html,
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: rgb(150, 153, 157);
 }
+
 
 .website-name {
     text-align: center;
@@ -18,6 +18,7 @@ html,
     margin-top: 20px;
     margin-bottom: 20px;
     box-shadow: 10px 5px 10px rgba(0, 0, 0, 1);
+    width: 100%;
 }
 
 .section-name {
@@ -26,6 +27,7 @@ html,
     margin-top: 20px;
     margin-bottom: 20px;
     box-shadow: 10px 5px 10px rgba(0, 0, 0, 1);
+    width: 100%;
 }
 
 
@@ -39,41 +41,39 @@ html,
     align-items: center;
     justify-content: space-between;
     transition: 0.3s ease-in-out;
+    box-shadow: 10px 5px 10px rgba(0, 0, 0, 1);
 }
-
 
 .card-img {
     width: 80%;
     height: 60%;
     margin: 1.5rem 0;
     padding: 20px;
-    background-color: rgb(220, 219, 153);
 }
 
 
 .card-title {
     font-size: 2.2rem;
     margin-top: 15px;
-    background-color: rgb(220, 219, 153);
 }
 
 
 .card-price {
     font-size: 1.8rem;
     padding: 20px;
-    background-color: rgb(220, 219, 153);
     text-align: center;
 }
-
 
 .container {
     display: flex;
     flex-wrap: wrap;
-    width: 85vw;
+    width: 100vw;
     justify-content: space-around;
     margin: auto;
+    align-items: center;
+    background-color: rgb(150, 153, 157);
 }
 
 .card:hover {
-    box-shadow: 10px 5px 10px rgba(0, 0, 0, 1);
+    transform: scale(1.1, 1.1);
 }
