--- a/style.css
+++ b/style.css
@@ -51,6 +51,13 @@ html,
     padding: 20px;
 }
 
+.card-img-people {
+    width: 70%;
+    height: 80%;
+    margin: 1.5rem 0;
+    padding: 20px;
+}
+
 
 .card-title {
     font-size: 2.2rem;
@@ -76,4 +83,5 @@ html,
 
 .card:hover {
     transform: scale(1.1, 1.1);
+    background-color: rgb(130, 154, 185);
 }
