flexbox animations project

--- a/style.css
+++ b/style.css
@@ -32,6 +32,16 @@ html,
     }
 }
 
+@keyframes fade {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
 .website-name {
     text-align: center;
     font-size: 50px;
@@ -39,6 +49,7 @@ html,
     margin-bottom: 20px;
     box-shadow: 10px 5px 10px rgba(0, 0, 0, 1);
     width: 100%;
+    animation: fade 3s;
 }
 
 .section-name {
