--- a/style.css
+++ b/style.css
@@ -1,188 +1,151 @@
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia"><style>body {
-    font-family: "Sofia", sans-serif;
-}
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia"><style>body {
+            font-family: "Sofia", sans-serif;
+        }
 
-body,
-html,
-* {
-    font-size: 10px;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
+        body,
+        html,
+        * {
+            font-size: 10px;
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
 
-@keyframes bounce {
 
-    0%,
-    20%,
-    60%,
-    100% {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
-    }
+        @media screen and (max-width: 1200px) {
+            .card {
+                width: 100%;
+                height: 100%;
+            }
 
-    40% {
-        -webkit-transform: translateY(-20px);
-        transform: translateY(-20px);
-    }
+            .card-text {
+                font-size: 9px;
+            }
+        }
 
-    80% {
-        -webkit-transform: translateY(-10px);
-        transform: translateY(-10px);
-    }
-}
+        @keyframes bounce {
 
-@keyframes fade {
-    0% {
-        opacity: 0;
-    }
+            0%,
+            20%,
+            60%,
+            100% {
+                -webkit-transform: translateY(0);
+                transform: translateY(0);
+            }
 
-    100% {
-        opacity: 1;
-    }
-}
+            40% {
+                -webkit-transform: translateY(-20px);
+                transform: translateY(-20px);
+            }
 
-.website-name {
-    text-align: center;
-    font-size: 50px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    box-shadow: 10px 5px 10px rgba(0, 0, 0, 1);
-    width: 100%;
-    animation: fade 3s;
-}
+            80% {
+                -webkit-transform: translateY(-10px);
+                transform: translateY(-10px);
+            }
+        }
 
-.section-name {
-    text-align: center;
-    font-size: 30px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    box-shadow: 10px 5px 10px rgba(0, 0, 0, 1);
-    width: 100%;
-}
+        @keyframes fade {
+            0% {
+                opacity: 0;
+            }
 
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100vw;
-    justify-content: space-around;
-    margin: auto;
-    align-items: center;
-    background-color: rgb(150, 153, 157);
-}
+            100% {
+                opacity: 1;
+            }
+        }
 
-.card {
-    height: 50vh;
-    width: 24%;
-    margin: 2.5rem 0;
-    display: flex;
-    background-color: rgb(220, 219, 153);
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    transition: 0.3s ease-in-out;
-    box-shadow: 10px 5px 10px rgba(0, 0, 0, 1);
-}
 
-.card-img {
-    width: 80%;
-    height: 60%;
-    margin: 1.5rem 0;
-    padding: 20px;
-}
+        .website-name {
+            text-align: center;
+            font-size: 50px;
+            margin-top: 20px;
+            margin-bottom: 20px;
+            box-shadow: 10px 5px 10px rgba(0, 0, 0, 1);
+            width: 100%;
+            animation: fade 3s;
+        }
 
-.card-img-people {
-    width: 70%;
-    height: 80%;
-    margin: 1.5rem 0;
-    padding: 20px;
-}
+        .section-name {
+            text-align: center;
+            font-size: 30px;
+            margin-top: 20px;
+            margin-bottom: 20px;
+            box-shadow: 10px 5px 10px rgba(0, 0, 0, 1);
+            width: 100%;
+        }
 
-.card-title {
-    font-size: 2.2rem;
-    margin-top: 15px;
-}
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            width: 100vw;
+            justify-content: space-around;
+            align-items: center;
+            background-color: rgb(150, 153, 157);
+        }
 
-.card-price {
-    font-size: 1.8rem;
-    padding: 20px;
-    text-align: center;
-}
+        .card {
+            height: 50vh;
+            width: 24%;
+            margin: 2.5rem 0;
+            display: flex;
+            background-color: rgb(220, 219, 153);
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-between;
+            transition: 0.3s ease-in-out;
+            box-shadow: 10px 5px 10px rgba(0, 0, 0, 1);
+        }
 
-.card-people {
-    height: 50vh;
-    width: 24%;
-    margin: 2.5rem 0;
-    display: flex;
-    background-color: rgb(220, 219, 153);
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    transition: 0.3s ease-in-out;
-    box-shadow: 10px 5px 10px rgba(0, 0, 0, 1);
-}
+        .card-img {
+            width: 80%;
+            height: 60%;
+            margin: 1.5rem 0;
+            padding: 20px;
+        }
 
-.card-hover1 {
-    height: 50vh;
-    width: 24%;
-    margin: 2.5rem 0;
-    display: flex;
-    background-color: rgb(220, 219, 153);
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    transition: 0.3s ease-in-out;
-    box-shadow: 10px 5px 10px rgba(0, 0, 0, 1);
-}
+        .card-img-people {
+            width: 70%;
+            height: 80%;
+            margin: 1.5rem 0;
+            padding: 20px;
+        }
 
-.card-hover2 {
-    height: 50vh;
-    width: 24%;
-    margin: 2.5rem 0;
-    display: flex;
-    background-color: rgb(220, 219, 153);
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    transition: 0.3s ease-in-out;
-    box-shadow: 10px 5px 10px rgba(0, 0, 0, 1);
-}
+        .card-title {
+            font-size: 2.2rem;
+            margin-top: 15px;
+        }
 
-.card-hover3 {
-    height: 50vh;
-    width: 24%;
-    margin: 2.5rem 0;
-    display: flex;
-    background-color: rgb(220, 219, 153);
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    transition: 0.3s ease-in-out;
-    box-shadow: 10px 5px 10px rgba(0, 0, 0, 1);
-}
+        .card-price {
+            font-size: 1.8rem;
+            padding: 20px;
+            text-align: center;
+        }
 
-.card:hover {
-    transform: scale(1.1, 1.1);
-    background-color: rgb(130, 154, 185);
-}
 
-.card-people:hover {
-    color: rgb(66, 93, 75) !important;
-    border-radius: 50px;
-    border-color: rgb(66, 93, 75) !important;
-    transition: 0.3s;
-}
 
-.card-hover1:hover {
-    color: #6bafaa;
-    box-shadow: 0px 0px 5px #6bafaa;
-    text-shadow: 0px 0px 5px #6bafaa;
-}
 
-.card-hover2:hover {
-    opacity: 0.5;
-}
+        #hover4:hover {
+            transform: scale(1.1, 1.1);
+            background-color: rgb(130, 154, 185);
+        }
 
-.card-hover3:hover {
-    animation: bounce 1s;
-}
+        #hover5:hover {
+            color: rgb(66, 93, 75) !important;
+            border-radius: 50px;
+            border-color: rgb(66, 93, 75) !important;
+            transition: 0.3s;
+        }
+
+        #hover1:hover {
+            color: #6bafaa;
+            box-shadow: 0px 0px 5px #6bafaa;
+            text-shadow: 0px 0px 5px #6bafaa;
+        }
+
+        #hover2:hover {
+            opacity: 0.5;
+        }
+
+        #hover3:hover {
+            animation: bounce 1s;
+        }
